--- a/styles/style.scss
+++ b/styles/style.scss
@@ -401,3 +401,65 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     background: #fff;
     color: #0B2234;
   }
+
+
+// INFO START BLOCK
+.info-start {
+  width: 92.8rem;
+  padding: 3rem 4.7rem;
+  background: #fff;
+  box-sizing: border-box;
+  border-radius: 3.2rem;
+  box-shadow: 0 0.8rem 5rem rgba(34, 61, 116, 0.08);
+  margin: -5rem auto 6.3rem;
+  position: relative;
+}
+@media screen and (max-width: 768px) {
+  .info-start {
+    width: 34.3rem;
+    padding: 3rem;
+    text-align: center;
+  }
+}
+
+.info-start__blocks {
+  display: flex;
+  justify-content: space-between;
+}
+@media screen and (max-width: 768px) {
+  .info-start__blocks {
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .info-start__block:not(:last-child) {
+    margin-bottom: 3.9rem;
+  }
+}
+.info-start__block-icon {
+  display: inline-block;
+  background: url("../images/avatar.png") no-repeat;
+  background-size: contain;
+  width: 8.9rem;
+  height: 5.1rem;
+}
+.info-start__block-icon--2 {
+  background-image: url("../images/avatar_2.png");
+}
+.info-start__block-icon--3 {
+  background-image: url("../images/avatar_3.png");
+}
+.info-start__block-desc {
+  font-weight: 500;
+  font-size: 1.5rem;
+  line-height: 1.6;
+  color: #1d3c55;
+  margin: 2.2rem 0 1.1rem;
+}
+.info-start__block-txt {
+  font-weight: bold;
+  font-size: 2.2rem;
+  line-height: 1.1;
+  color: #1d3c55;
+}
