--- a/styles/style.scss
+++ b/styles/style.scss
@@ -273,6 +273,28 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     font-family: "Roboto";
   }
   
+  .container {
+    box-sizing: border-box;
+    padding: 0 6.4rem;
+    margin: 0 auto;
+    max-width: 172.8rem;
+  }
+
+  @media screen and (max-width: 768px) {
+    .container {
+      padding: 0 1.6rem;
+    }
+  }
+
+  .container--info_left {
+    padding: 0 9.7rem 0 4.9rem;
+  }
+  @media screen and (max-width: 768px) {
+    .container--info_left {
+      padding: 0 1.6rem;
+    }
+  }
+
   /* !COMMON */
 
 .info-big--wrapper {
@@ -290,18 +312,6 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     }
   }
 
-  .container {
-    box-sizing: border-box;
-    padding: 0 6.4rem;
-    margin: 0 auto;
-    max-width: 172.8rem;
-  }
-
-  @media screen and (max-width: 768px) {
-    .container {
-      padding: 0 1.6rem;
-    }
-  }
 
   .info-big {
     text-align: center;
@@ -372,7 +382,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     border-radius: 2rem;
     background: rgba(203, 203, 255, 0.5);
     padding: 1.15rem 2.3rem;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 1.6rem;
     line-height: 1;
     color: #5e5ffe;
@@ -393,7 +403,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   @media screen and (max-width: 768px) {
     .info-big .info-color__txt {
       top: 43.7rem;
-      right: 5rem;
+      right: 8.5rem;
     }
   }
 
@@ -462,4 +472,203 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   font-size: 2.2rem;
   line-height: 1.1;
   color: #1d3c55;
+}
+
+
+// THIRD BLOCK Достанем 
+// до вершины вместе! с Lerchek
+
+.info__wrapper--pink {
+  position: relative;
+  padding: 5.7rem 0 21.1rem 0;
+}
+@media screen and (max-width: 768px) {
+  .info__wrapper--pink {
+    padding: 0;
+  }
+}
+.info__wrapper--pink::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 172.8rem;
+  height: 108rem;
+  background: url("../images/info_bg@2x.jpg") no-repeat;
+  background-size: contain;
+}
+@media screen and (max-width: 768px) {
+  .info__wrapper--pink::before {
+    background-image: url("../images/info_bg_mob.jpg");
+    width: 37.5rem;
+    height: 57.8rem;
+    top: 19rem;
+  }
+}
+
+.info {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+}
+@media screen and (max-width: 768px) {
+  .info {
+    flex-direction: column;
+    position: relative;
+  }
+}
+
+.info-img__block {
+  width: 86rem;
+  position: relative;
+}
+@media screen and (max-width: 768px) {
+  .info-img__block {
+    width: 100%;
+    position: absolute;
+    top: 22.7rem;
+  }
+}
+
+.info-block {
+  margin-top: 10rem;
+  width: 74.9rem;
+  position: relative;
+  z-index: 10;
+}
+@media screen and (max-width: 768px) {
+  .info-block {
+    width: 100%;
+    margin-top: auto;
+  }
+}
+
+.title {
+  font-weight: 500;
+  font-size: 7.2rem;
+  line-height: 1.19;
+  color: #0B2234;
+  margin-bottom: 2.6rem;
+}
+
+@media screen and (max-width: 768px) {
+  .title {
+    font-size: 3.2rem;
+    max-width: 29rem;
+    line-height: 1.31;
+    margin: 0 auto 2rem;
+  }
+}
+
+.title--small {
+  font-size: 6.2rem;
+}
+@media screen and (max-width: 768px) {
+  .title--small {
+    font-size: 3.2rem;
+  }
+}
+
+.title__avatar {
+  display: inline-block;
+  background: url("../images/avatar.png") no-repeat;
+  background-size: contain;
+  width: 8.9rem;
+  height: 5rem;
+  position: relative;
+  top: 1.2rem;
+}
+@media screen and (max-width: 768px) {
+  .title__avatar {
+    width: 6.3rem;
+    height: 3.6rem;
+    top: 0.7rem;
+  }
+}
+
+.title__color {
+  position: relative;
+  font-weight: bold;
+  font-size: 9.9rem;
+  line-height: 1;
+  color: #29ACFF;
+  display: inline-block;
+  z-index: 5;
+}
+@media screen and (max-width: 768px) {
+  .title__color {
+    font-size: 4.2rem;
+  }
+}
+.title__color::before {
+  content: "";
+  position: absolute;
+  bottom: -10.5rem;
+  left: 50%;
+  transform: translate(-50%, 0);
+  background: url("../images/line.png") no-repeat;
+  background-size: contain;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+@media screen and (max-width: 768px) {
+  .title__color::before {
+    bottom: -4.5rem;
+  }
+}
+
+.info-block__list {
+  margin-bottom: 6rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  position: relative;
+  z-index: 10;
+}
+@media screen and (max-width: 768px) {
+  .info-block__list {
+    margin: 61.1rem 0 3rem;
+    position: relative;
+    z-index: 10;
+  }
+}
+
+.info-block__item {
+  padding: 2rem 3rem 2rem 6.4rem;
+  border-radius: 2rem;
+  background: rgba(255, 255, 255, 0.8);
+  position: relative;
+  font-weight: normal;
+  font-size: 1.8rem;
+  line-height: 1.66;
+  color: #000;
+  box-shadow: 0 0.8rem 5rem rgba(34, 61, 116, 0.08);
+}
+@media screen and (max-width: 768px) {
+  .info-block__item {
+    font-size: 1.4rem;
+    padding: 1.3rem 2rem 1.3rem 5.1rem;
+    line-height: 1.57;
+  }
+}
+.info-block__item:not(:last-child) {
+  margin-bottom: 1.2rem;
+}
+.info-block__item::before {
+  content: "";
+  position: absolute;
+  top: 3rem;
+  left: 3rem;
+  background: url("../images/check.svg") no-repeat;
+  background-size: contain;
+  width: 1.6rem;
+  height: 1.1rem;
+}
+@media screen and (max-width: 768px) {
+  .info-block__item::before {
+    width: 1.4rem;
+    height: 1rem;
+    left: 2.5rem;
+  }
 }
