--- a/styles/style.css
+++ b/styles/style.css
@@ -540,7 +540,7 @@ label {
   font-size: 7.2rem;
   line-height: 1.19;
   color: #0B2234;
-  margin-bottom: 2.6rem;
+  margin-bottom: 5rem;
 }
 
 @media screen and (max-width: 768px) {
@@ -706,7 +706,7 @@ b {
   text-align: center;
   padding: 30rem 0 5.2rem 0;
   border-radius: 0 0 10rem 10rem;
-  margin: 27.2rem 0 0 0;
+  margin: 27.2rem 0 5rem 0;
   position: relative;
 }
 
@@ -812,4 +812,77 @@ b {
   .prize-big__block-img--3 {
     width: 37.5rem;
   }
+}
+.carousel {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 30px 10px;
+  font-family: "DM Sans", sans-serif;
+  transition: background 0.4s ease-in;
+}
+
+input[type=radio] {
+  display: none;
+}
+
+.card {
+  position: absolute;
+  width: 60%;
+  height: 100%;
+  left: 0;
+  right: 0;
+  margin: auto;
+  transition: transform 0.5s ease;
+  cursor: pointer;
+}
+
+.container-carousel {
+  width: 100%;
+  max-width: 800px;
+  max-height: 600px;
+  height: 50vh;
+  transform-style: preserve-3d;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  margin: 2.5rem 0rem 5rem;
+}
+
+.cards {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  margin-bottom: 20px;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+#item-1:checked ~ .cards #song-3, #item-2:checked ~ .cards #song-1, #item-3:checked ~ .cards #song-2 {
+  transform: translatex(-40%) scale(0.8);
+  opacity: 0.4;
+  z-index: 0;
+}
+
+#item-1:checked ~ .cards #song-2, #item-2:checked ~ .cards #song-3, #item-3:checked ~ .cards #song-1 {
+  transform: translatex(40%) scale(0.8);
+  opacity: 0.4;
+  z-index: 0;
+}
+
+#item-1:checked ~ .cards #song-1, #item-2:checked ~ .cards #song-2, #item-3:checked ~ .cards #song-3 {
+  transform: translatex(0) scale(1);
+  opacity: 1;
+  z-index: 1;
+}
+#item-1:checked ~ .cards #song-1 img, #item-2:checked ~ .cards #song-2 img, #item-3:checked ~ .cards #song-3 img {
+  box-shadow: 0px 0px 5px 0px rgba(81, 81, 81, 0.47);
 }/*# sourceMappingURL=style.css.map */
