--- a/styles/style.css
+++ b/styles/style.css
@@ -315,7 +315,7 @@ label {
 }
 
 .title__white {
-  font-weight: 600;
+  font-weight: 500;
   font-size: 9.9rem;
   line-height: 1.1;
   color: #fff;
@@ -327,7 +327,7 @@ label {
   }
 }
 .txt__white {
-  font-weight: 600;
+  font-weight: 400;
   font-size: 2rem;
   line-height: 1.8;
   color: #fff;
@@ -888,12 +888,12 @@ img {
 }
 
 .container--eco {
-  padding: 0 8rem 8rem 0;
+  padding: 0 8rem 0 0;
 }
 
 @media screen and (max-width: 768px) {
   .container--eco {
-    padding: 0 1.6rem 8rem;
+    padding: 0 1.6rem 0;
   }
   .container--eco .title {
     max-width: 100%;
@@ -1078,5 +1078,50 @@ img {
 
 .button__center {
   text-align: center;
-  margin: 0 auto;
+  margin: 7rem auto;
+}
+
+.info-big--wrapper_2 {
+  margin-top: 0;
+  padding: 65.8rem 0 14.2rem 0;
+  background-image: url("../images/info_big_bg_2.jpg");
+  background-position: center;
+}
+
+@media screen and (max-width: 768px) {
+  .info-big--wrapper_2 {
+    padding: 47.9rem 0 7.7rem 0;
+    background-image: url("../images/info_big_bg_2_mob.jpg");
+    background-position: top center;
+  }
+}
+.info-big--wrapper_2 .title__white {
+  font-size: 7.2rem;
+}
+
+@media screen and (max-width: 768px) {
+  .info-big--wrapper_2 .title__white {
+    font-size: 3.2rem;
+  }
+}
+.info-big--wrapper_2 .social {
+  top: 51.9rem;
+}
+
+.info-big--wrapper_2 .info-color__txt {
+  top: 57.4rem;
+}
+
+@media screen and (max-width: 768px) {
+  .info-big--wrapper_2 .info-color__txt {
+    top: 43.4rem;
+  }
+}
+.info-big--wrapper_2 .txt__white {
+  max-width: 123rem;
+}
+
+.info-color__txt--blue {
+  background: #019cfe;
+  color: #fff;
 }/*# sourceMappingURL=style.css.map */
