--- a/styles/style.css
+++ b/styles/style.css
@@ -1124,4 +1124,25 @@ img {
 .info-color__txt--blue {
   background: #019cfe;
   color: #fff;
+}
+
+#review-item-1:checked ~ .cards #review-song-3, #review-item-2:checked ~ .cards #review-song-1, #review-item-3:checked ~ .cards #review-song-2 {
+  transform: translatex(-40%) scale(0.8);
+  opacity: 0.4;
+  z-index: 0;
+}
+
+#review-item-1:checked ~ .cards #review-song-2, #review-item-2:checked ~ .cards #review-song-3, #review-item-3:checked ~ .cards #review-song-1 {
+  transform: translatex(40%) scale(0.8);
+  opacity: 0.4;
+  z-index: 0;
+}
+
+#review-item-1:checked ~ .cards #review-song-1, #review-item-2:checked ~ .cards #review-song-2, #review-item-3:checked ~ .cards #review-song-3 {
+  transform: translatex(0) scale(1);
+  opacity: 1;
+  z-index: 1;
+}
+#review-item-1:checked ~ .cards #review-song-1 img, #review-item-2:checked ~ .cards #review-song-2 img, #review-item-3:checked ~ .cards #review-song-3 img {
+  box-shadow: 0px 0px 5px 0px rgba(81, 81, 81, 0.47);
 }/*# sourceMappingURL=style.css.map */
