--- a/styles/style.css
+++ b/styles/style.css
@@ -242,6 +242,7 @@ html {
   font-family: "Roboto";
   font-weight: normal;
   background: #fff;
+  overflow-x: hidden;
 }
 
 @media screen and (max-width: 768px) {
@@ -1326,6 +1327,80 @@ img {
   height: 1rem;
 }
 
+.footer-block__txt {
+  font-weight: 500;
+  font-size: 1.6rem;
+  line-height: 1.1;
+  color: #1D3C55;
+}
+
+@media screen and (max-width: 768px) {
+  .footer-block__txt {
+    font-size: 1.6rem;
+  }
+}
+.footer-block__txt:hover {
+  text-decoration: none;
+}
+
+.footer-block__txt a {
+  color: #019CFE;
+}
+
+.footer {
+  margin-top: 1rem;
+  padding-bottom: 2.5rem;
+}
+
+@media screen and (max-width: 768px) {
+  .footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 3rem;
+  }
+}
+.footer-block {
+  margin-top: 2.3rem;
+  display: flex;
+  text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+  .footer-block {
+    flex-direction: column;
+    align-items: center;
+    margin-top: 8rem;
+  }
+}
+.footer-block__links {
+  margin-left: auto;
+}
+
+@media screen and (max-width: 768px) {
+  .footer-block__links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 4.3rem auto 0;
+  }
+}
+@media screen and (max-width: 768px) {
+  .footer-block__links .footer-block__txt {
+    font-size: 1.3rem;
+    color: #A8AFB4;
+  }
+}
+.footer-block__links .footer-block__txt:not(:last-child) {
+  margin-right: 6.4rem;
+}
+
+@media screen and (max-width: 768px) {
+  .footer-block__links .footer-block__txt:not(:last-child) {
+    margin-right: 0;
+    margin-bottom: 3rem;
+  }
+}
 .footer-block__txt {
   font-weight: 500;
   font-size: 1.6rem;
