--- a/styles/style.css
+++ b/styles/style.css
@@ -265,9 +265,16 @@ label {
   }
 }
 /* !COMMON */
+#myVideo {
+  position: absolute;
+  right: 0;
+  bottom: -74rem;
+  width: 100vw;
+  z-index: -1;
+}
+
 .info-big--wrapper {
   padding: 60.3rem 0 13.4rem 0;
-  background: url("https://cdn.lerchek.fit/storage/altai/images/info_big_bg.jpg") no-repeat;
   background-size: cover;
   margin-top: -5rem;
   position: relative;
@@ -276,8 +283,14 @@ label {
 @media screen and (max-width: 768px) {
   .info-big--wrapper {
     padding: 52.5rem 0 13rem 0;
-    background-image: url("https://cdn.lerchek.fit/storage/altai/images/info_big_bg.jpg");
     background-position: center;
+  }
+  #myVideo {
+    position: absolute;
+    right: -26.5%;
+    bottom: 1rem;
+    z-index: -1;
+    min-width: 150vw;
   }
 }
 .info-big {
@@ -370,10 +383,29 @@ label {
   right: 47.6rem;
 }
 
+.info-big::before {
+  content: "";
+  position: absolute;
+  right: 6rem;
+  bottom: 10rem;
+  border-radius: 3.2rem;
+  z-index: -1;
+  background-color: dimgray;
+  opacity: 0.5;
+  height: 37rem;
+  width: 90vw;
+}
+
 @media screen and (max-width: 768px) {
+  .info-big::before {
+    right: 1rem;
+    bottom: 12rem;
+    height: 25rem;
+    width: 95vw;
+  }
   .info-big .info-color__txt {
-    top: 43.7rem;
-    right: 8.5rem;
+    top: 24rem;
+    right: 20%;
   }
 }
 .info-color__txt--white {
