--- a/styles/style.scss
+++ b/styles/style.scss
@@ -302,9 +302,17 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 
   /* !COMMON */
 
+  #myVideo {
+    position: absolute;
+    right: 0;
+    bottom: -74rem;
+    width: 100vw;
+    z-index: -1;
+  }
+
 .info-big--wrapper {
     padding: 60.3rem 0 13.4rem 0;
-    background: $mainImage no-repeat;
+    // background: $mainImage no-repeat;
     background-size: cover;
     margin-top: -5rem;
     position: relative;
@@ -312,8 +320,16 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   @media screen and (max-width: 768px) {
     .info-big--wrapper {
       padding: 52.5rem 0 13rem 0;
-      background-image: $mainImage;
+      // background-image: $mainImage;
       background-position: center;
+    }
+
+    #myVideo {
+      position: absolute;
+      right: -26.5%;
+      bottom: 1rem;
+      z-index: -1;
+      min-width: 150vw;
     }
   }
 
@@ -405,10 +421,30 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
     top: 53.4rem;
     right: 47.6rem;
   }
+
+  .info-big::before {
+    content: "";
+    position: absolute;
+    right: 6rem;
+    bottom: 10rem;
+    border-radius: 3.2rem;
+    z-index: -1;
+    background-color: dimgray;
+    opacity: 0.5;
+    height: 37rem;
+    width: 90vw;
+  }
+
   @media screen and (max-width: 768px) {
+    .info-big::before {
+      right: 1rem;
+      bottom: 12rem;
+      height: 25rem;
+      width: 95vw;
+    }
     .info-big .info-color__txt {
-      top: 43.7rem;
-      right: 8.5rem;
+      top: 24rem;
+      right: 20%;
     }
   }
 
