--- a/styles/style.css
+++ b/styles/style.css
@@ -275,14 +275,17 @@ label {
 
 .info-big--wrapper {
   padding: 60.3rem 0 13.4rem 0;
+  background: url("../images/ezgif.com-gif-maker.gif") no-repeat;
   background-size: cover;
   margin-top: -5rem;
   position: relative;
+  z-index: -1;
 }
 
 @media screen and (max-width: 768px) {
   .info-big--wrapper {
     padding: 52.5rem 0 13rem 0;
+    background-image: url("../images/ezgif.com-gif-maker.gif");
     background-position: center;
   }
   #myVideo {
@@ -404,7 +407,7 @@ label {
     width: 95vw;
   }
   .info-big .info-color__txt {
-    top: 24rem;
+    top: 32rem;
     right: 20%;
   }
 }
@@ -428,6 +431,7 @@ label {
   .info-start {
     width: 34.3rem;
     padding: 3rem;
+    margin-top: -3rem;
     text-align: center;
   }
 }
