--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,5 +1,5 @@
 // VARIABLES
-$mainImage : url("https://cdn.lerchek.fit/storage/altai/images/info_big_bg.jpg");
+$mainImage : url("../images/ezgif.com-gif-maker.gif");
 
 /* COMMON */
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
@@ -312,15 +312,16 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
 
 .info-big--wrapper {
     padding: 60.3rem 0 13.4rem 0;
-    // background: $mainImage no-repeat;
+    background: $mainImage no-repeat;
     background-size: cover;
     margin-top: -5rem;
     position: relative;
+    z-index: -1;
   }
   @media screen and (max-width: 768px) {
     .info-big--wrapper {
       padding: 52.5rem 0 13rem 0;
-      // background-image: $mainImage;
+      background-image: $mainImage;
       background-position: center;
     }
 
@@ -443,7 +444,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
       width: 95vw;
     }
     .info-big .info-color__txt {
-      top: 24rem;
+      top: 32rem;
       right: 20%;
     }
   }
@@ -469,6 +470,7 @@ html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockq
   .info-start {
     width: 34.3rem;
     padding: 3rem;
+    margin-top: -3rem;
     text-align: center;
   }
 }
