--- a/styles/style.css
+++ b/styles/style.css
@@ -277,6 +277,7 @@ label {
   padding: 60.3rem 0 13.4rem 0;
   background: url("../images/ezgif.com-gif-maker.gif") no-repeat;
   background-size: cover;
+  background-position-y: -137rem;
   margin-top: -5rem;
   position: relative;
   z-index: -1;
